2010-10-26  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Add -lm when needed (rint, sqrt).
	* editor/gtk/editor.c, common/gtk/game-rules.c, common/gtk/common_gtk.c, common/state.c, common/log.c,
	common/cards.c, server/gtk/main.c, server/turn.c, client/gtk/plenty.c, client/gtk/resource-table.c,
	client/gtk/name.c, client/gtk/gold.c, client/gtk/resource.c, client/gtk/quote.c, client/gtk/develop.c,
	client/gtk/legend.c, client/gtk/gameover.c, client/gtk/avahi-browser.c, client/gtk/discard.c,
	client/gtk/monopoly.c, client/gtk/settingscreen.c, client/gtk/chat.c, client/gtk/gui.c,
	client/gtk/connect.c, client/gtk/histogram.c, client/common/develop.c, client/common/player.c,
	client/ai/greedy.c, client/ai/ai.c, client/ai/lobbybot.c: Update and reenable translator hints.

2010-10-25  Roland Clobus <rclobus@rclobus.nl>
	* admin-scripts: Added various scripts to automate the meta-server.
	* getVersions.sh, kill-game.sh: Moved to admin-scripts.

2010-10-24  Roland Clobus <rclobus@rclobus.nl>
	* common/state.c: Fix bug introduced on 2010-10-20
	* common/state.c: g_return_if_fail was not required.

2010-10-20  Roland Clobus <rclobus@rclobus.nl>
	* common/game.c, common/game.h, common/state.c, common/state.h,
	server/player.c: Renamed sm_vformat to game_vprintf and try_recv to
	game_vscanf, for better generic location.

2010-10-15  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Extra quotes for GOB2 check, needed for Debian Stable.

2010-10-14  Roland Clobus <rclobus@rclobus.nl>
	* server/gold.c: Set gold counter to zero after automatic distribution
	of gold.

2010-10-13  Roland Clobus <rclobus@rclobus.nl>
	* server/player.c, server/server.h, server/main.c: Automatically quit a
	game that is started on the metaserver that has no human player for
	30 minutes.
	* pioneers.nsi.in: Adding en_GB and gl.

2010-10-07  Roland Clobus <rclobus@rclobus.nl>
	* common/notifying-string.gob, common/Makefile.am, configure.ac,